@@ -378,4 +378,4 @@ fastcgi.server = (
 ---------------------------------------------------------------------------
 Please refer to the project site http://iipimage.sf.net for further details
 ---------------------------------------------------------------------------
-(c) 2000-2013 Ruven Pillay <ruven@users.sourceforge.net>
+(c) 2000-2014 Ruven Pillay <ruven@users.sourceforge.net>
